@@ -2437,6 +2437,17 @@ Verilator cannot schedule these variables correctly.
 Ignoring this warning may make Verilator simulations differ from other
 simulators.
 
+=item INCABSPATH
+
+Warns that an `include filename specifies an absolute path.  This means the
+code will not work on any other system with a different file system layout.
+Instead of using absolute paths, relative paths (preferably without any
+directory specified whatever) should be used, and +include used on the
+command line to specify the top include source directory.
+
+Disabled by default as this is a code style warning, it will simulate
+correctly.
+
 =item LITENDIAN
 
 Warns that a vector is declared with little endian bit numbering
